# afterpaths

./: .gitignore  README.md  afterpaths_agent_feedback.md  demo.tape  pyproject.toml  server.json
afterpaths/: __init__.py  analytics.py  cli.py  config.py  daily_stats.py  file_tracking.py  licensing.py  local_analytics.py  mcp_server.py  rules.py  search.py  serializers.py  stack.py  storage.py
afterpaths/exporters/: base.py  claude.py  cursor.py
afterpaths/sources/: base.py  claude_code.py  cursor.py
afterpaths/tests/: test_exporters.py  test_file_tracking.py  test_search.py
docs/: analytics.md  commands.md
