[project]
name = "afterpaths"
version = "0.2.0"
description = "Smarter with every session, automatically"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
summarize = [
    "anthropic>=0.39.0",
]
openai = [
    "openai>=1.0.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
all = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
afterpaths = "afterpaths.cli:main"
ap = "afterpaths.cli:main"  # Short alias for easier typing
afterpaths-mcp = "afterpaths.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
