[project]
name = "afterpaths"
version = "0.2.0"
description = "Smarter with every session, automatically"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "mcp-server", "claude", "cursor", "codex", "coding-assistant", "session-history", "rules"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
summarize = [
    "anthropic>=0.50.0",
]
openai = [
    "openai>=1.0.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
all = [
    "anthropic>=0.50.0",
    "openai>=1.0.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
afterpaths = "afterpaths.cli:main"
ap = "afterpaths.cli:main"  # Short alias for easier typing
afterpaths-mcp = "afterpaths.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
